# huggingface-datasets_MSCOCO

./: MSCOCO.py  README.md  annotation.py  base_example.py  caption.py  category.py  const.py  image.py  info.py  instances.py  license.py  person_keypoint.py  processor.py  pyproject.toml  typehint.py
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: MSCOCO_caption_test.py  MSCOCO_instances_test.py  MSCOCO_keypoints_test.py  MSCOCO_test.py  conftest.py
