[tool.poetry]
name = "huggingface-datasets-mscoco"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
datasets = { extras = ["vision"], version = ">=1.0.0" }
pycocotools = "^2.0.7"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.0"
black = ">=22.1.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
pytest = ">=6.0.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
